--- a/laboratorio#6/estilo.css
+++ b/laboratorio#6/estilo.css
@@ -2,21 +2,18 @@ body {
     font-family: arial;
 }
 .jane-joe {
-    color:#375e97;
+    color: #375e97;
     border-bottom: solid 1px #375e97;
     font-family: Georgia;
 }
-
-.tittle-web{
-    color:#999999;
+h2 {
+    color: #999999;
 }
-
-.box-1 {
+.container {
     border: solid 1px black;
     padding: 1rem;
-    margin: 5rem;  
+    margin: 5rem;
 }
-
 .link {
     text-decoration: underline #fb6542;
     color: #fb6542;
